test/cgip/PP/error/inheritance/rep/reperr-26.vdm
-- This file has been automatically updated wrt. VDM++ Lang.Adjust, 1th iteration
-- This file has been automatically updated wrt. VDM++ Lang.Adjust, 1th iteration


--  B - C - E - F
--    \   /
--      D
--
-- B
class B

instance variables
    d : char := 'd';


functions 
    f: () -> char
    f () ==
        'a'

end B


class C is subclass of B

instance variables
    c : char := 'c';

end C

class D is subclass of B

instance variables
public    c : char := 'd';


end D

class E is subclass of C, D

operations

   m: () ==> char  
   m () ==
        return c

end E


class F is subclass of E


operations
public   getc: () ==> char  
   getc () ==
     return E`c
end F

class A

operations 
  public Test : () ==> char  
  Test () ==
     new F().getc()

end A














